--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,16 @@ body{
     background-attachment: fixed;
     background-position: center;
 }
+
+.connecter .btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding:.9rem 3rem;
+    font-size: 1.7rem;
+    color:#fff;
+    background:#383024;
+    cursor: pointer;
+}
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -127,6 +137,69 @@ div.c-wrapper{
     text-transform: none;
     margin-left: 5%;
 }
+/*Voiture loueur*/
+.article .box-containerr{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+    gap:3.5rem;
+    margin-bottom: 4%;
+    margin-top: 5%;
+}
+
+.article .box-containerr .box{
+    border:var(--border);    
+}
+
+.article .box-containerr .box .image{
+    height: 25rem;
+    overflow:hidden;
+    width: 100%;
+}
+
+.article .box-containerr .box .image img{
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.article .box-containerr .box:hover .image img{
+    transform: scale(1.2);
+}
+
+.article .box-containerr .box .content{
+    padding:2rem;
+}
+
+.article .box-containerr .box .content .title{
+    font-size: 2.5rem;
+    line-height: 1.5;
+    color:#fff;
+}
+
+.article .box-containerr .box .content .title:hover{
+    color:var(--main-color);
+}
+
+.article .box-containerr .box .content span{
+    color:var(--main-color);
+    display: block;
+    padding-top: 1rem;
+    font-size: 2rem;
+}
+    
+.article .box-containerr .box .content ul{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color:#ccc;
+    padding:1rem 0;
+    text-transform: none;
+    margin-left: 5%;
+}
+.heading{
+    color: white;
+    font-size: 400%;
+    margin-top: 6%;
+}
 /*About us de accueil*/
 .about .row{
     align-items: center;
@@ -153,6 +226,23 @@ div.c-wrapper{
     color:#ccc;
     padding:1rem 0;
     line-height: 1.8;
+}
+
+.miaou{
+    background-color: rgb(223, 220, 219);
+}
+.custom-select{
+    font-size: 100%;
+}
+.form-control{
+    font-size: 100%;
+}
+.input-group-text{
+    font-size: 100%;
+}
+.ajout_voiture{
+    margin-top: -13%;
+    margin-bottom: -13%;
 }
 
 /*Inscription + co*/
@@ -200,3 +290,39 @@ form button{
   outline:none;
   cursor:pointer;
 }
+
+/*Essai panier*/
+@media (min-width: 1025px) {
+    .h-custom {
+    height: 100vh !important;
+    }
+    }
+    
+    .card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: .75em;
+    padding-right: .75em;
+    }
+    
+    .card-registration .select-arrow {
+    top: 13px;
+    }
+    
+    .bg-grey {
+    background-color: #eae8e8;
+    }
+    
+    @media (min-width: 992px) {
+    .card-registration-2 .bg-grey {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    }
+    }
+    
+    @media (max-width: 991px) {
+    .card-registration-2 .bg-grey {
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    }
+    }
